[project]
name = "project-07-science-data"
version = "0.1.0"
description = ""
authors = [
    {name = "levipoiani95",email = "levipoiani95@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "project_07_science_data", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
